# drone-cli

./: .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.claude/: skills.local.yaml.example
.claude/skills/ask-colleague/: SKILL.md
.claude/skills/cicd/: SKILL.md
.claude/skills/communicate/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/remember/: SKILL.md
.github/workflows/: publish.yml  tests.yml
docs/: skill-sources.md
drone/: __init__.py  __main__.py
drone/cli/: __init__.py  _errors.py  _output.py
drone/cli/_commands/: cli.py  doctor.py  explain.py  learn.py  overview.py  whoami.py
drone/explain/: __init__.py  catalog.py
tests/: test_cli.py  test_cli_introspection.py
